# small_hash_hs

./: benchmark.hs  example.hs  smallhash.cabal
Data/: SmallHash.hsc
cbits/: int_to_a.c  int_to_a.h  int_to_a_internals.h  list.h
