Name:                smallhash
Version:             0.0.1
Synopsis:            Haskell binding for small_hash
Description:         Haskell binding for small_hash
License:             BSD3
License-file:        LICENSE
Author:              Eyal Lotem <eyal.lotem@gmail.com>
Maintainer:          Eyal Lotem <eyal.lotem@gmail.com>
Category:            Graphics
Build-type:          Simple
-- Extra-source-files:  small_hash/*.c small_hash/*.h

Cabal-version:       >=1.8

Library
  -- Modules exported by the library.
  Exposed-modules: Data.SmallHash
--  Other-modules:

  -- Packages needed in order to build this package.
  -- "freetype2" and "OpenGL" deps are just for the C build side
  Build-depends: base > 3 && < 5

  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  Build-tools: hsc2hs
  ghc-options: -Wall -O2
  include-dirs: small_hash cbits
  c-sources: small_hash/small_hash.c cbits/int_to_a.c
  cc-options: -O2 -g

source-repository head
  type: git
  location: git://github.com/Peaker/small_hash.git

Flag examples
  Description: Build example programs
  Default: False

Executable example
  Main-is:       example.hs
  if !flag(examples)
    Buildable:     False
  else
    Buildable:     True
    Build-depends: base > 3 && < 5, smallhash
    ghc-options:   -Wall -O2
    cc-options: -O2 -g

Executable benchmark
  Main-is:       benchmark.hs
  if !flag(examples)
    Buildable:     False
  else
    Buildable:     True
    Build-depends: base > 3 && < 5, smallhash, time
    ghc-options:   -Wall -O2
    cc-options: -O2 -g -DNDEBUG
